--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
 
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/subsections-view.css">
+    <link rel="stylesheet" href="css/apps-view.css">
 	<link rel="stylesheet" media="(max-width: 1000px)" href="css/small.css">
     <link rel="stylesheet" media="(min-width: 1001px) and (max-width: 1359px)" href="css/medium.css">
     <link rel="stylesheet" media="(min-width: 1360px) and (max-width: 1599px)" href="css/large.css">
