--- a/app/index.html
+++ b/app/index.html
@@ -16,10 +16,19 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/subsections-view.css">
     <link rel="stylesheet" href="css/apps-view.css">
+    <link rel="stylesheet" href="css/topics-view.css">
+    <link rel="stylesheet" href="css/side-bar.css">
 	<link rel="stylesheet" media="(max-width: 1000px)" href="css/small.css">
     <link rel="stylesheet" media="(min-width: 1001px) and (max-width: 1359px)" href="css/medium.css">
     <link rel="stylesheet" media="(min-width: 1360px) and (max-width: 1599px)" href="css/large.css">
     <link rel="stylesheet" media="(min-width: 1600px)" href="css/very-large.css">
+
+    <script>
+        function invokeCommand(command) {
+            //alert("hello");
+            CommandApi.invokeCommand(command);
+        }
+    </script>
 </head>
 <body>
 	<div ng-view></div>
